<resources>
    <string name="app_name">WordsFactory</string>

    <string name="skip">Skip</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="lets_start">Let\'s Start</string>

    <string name="dictionary">Dictionary</string>
    <string name="training">Training</string>
    <string name="video">Video</string>

    <string name="noun">Noun</string>
    <string name="pronoun">Pronoun</string>
    <string name="verb">Verb</string>
    <string name="adjective">Adjective</string>
    <string name="adverb">Adverb</string>
    <string name="preposition">Preposition</string>
    <string name="conjunction">Conjunction</string>
    <string name="interjection">Interjection</string>

    <string name="intro_title_1">Learn anytime\nand anywhere</string>
    <string name="intro_title_2">Find a course\nfor you</string>
    <string name="intro_title_3">Improve your skills</string>
    <string name="intro_desc">Quarantine is the perfect time to spend your\nday learning something new, from anywhere!</string>

    <string name="signup_description">Create your account</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <string name="find_word">Find word…</string>
    <string name="part_of_speech">Part of Speech:</string>
    <string name="meanings">Meanings:</string>
    <string name="example">Example:</string>
    <string name="add_to_dictionary">Add to Dictionary</string>

    <string name="placeholder_short">Lorem ipsum</string>
    <string name="placeholder_normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="placeholder_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="splash_screen_alt_image_text">cool_kids_on_wheels</string>
    <string name="intro_screen_first_alt_image_text">cool_kids_long_distance_relationship</string>
    <string name="intro_screen_second_alt_image_text">cool_kids_staying_home</string>
    <string name="intro_screen_third_alt_image_text">cool_kids_high_tech</string>
    <string name="signup_screen_alt_image_text">cool_kids_standing</string>
    <string name="signup_screen_back_fab_text">back_button</string>
    <string name="dictionary_listen_text">listen_button</string>

    <string name="toast_empty_signup_field">One or more fields are not filled out. Please check if all fields are filled in and try again.</string>
</resources>